Bug 1692823 - Only end AudioInputProcessing if it has been set. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D105447